--- a/sps.html
+++ b/sps.html
@@ -17,8 +17,8 @@
         <div class="choice" id="Scissors">
             <img src="./rock.png"/>
         </div>
-        
+
     </div>
-    <div class=""></div>
+    <div></div>
 </body>
 </html>
