--- a/sps.html
+++ b/sps.html
@@ -16,9 +16,17 @@
         </div>
         <div class="choice" id="Scissors">
             <img src="./rock.png"/>
+        <div class="score-board">
+            <div class="score">
+                <p id="user-score">0</p>
+                <p>YOU</p>
+            </div>
+            <div class="score">
+                <p id="comp-score">0</p>
+                <p>COMP</p>
+            </div>
         </div>
-
-    </div>
-    <div></div>
+    <div class="msg-container"></div>
+    <div id="msg">play your move</div>
 </body>
 </html>
