fixed a small bug of images

--- a/sps.html
+++ b/sps.html
@@ -13,10 +13,10 @@
             <img src="./rock.png"/>
         </div>
         <div class="choice" id="paper">
-            <img src="./rock.png"/>
+            <img src="./paper.png"/>
         </div>
         <div class="choice" id="Scissors">
-            <img src="./rock.png"/>
+            <img src="./scissors.png"/>
         <div class="score-board">
             <div class="score">
                 <p id="user-score">0</p>
